--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 WHEREBY_ASSISTANT_KEY=
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_BUCKET_NAME=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
+AWS_S3_REGION=
+AWS_S3_BUCKET_NAME=
