--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "@types/express": "^4.17.21",
         "@types/web": "^0.0.267",
         "eslint": "^9.29.0",
-        "prettier": "^3.5.3",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "prettier": "^3.6.2",
         "tsx": "4.20.3",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.44.0"
     },
     "scripts": {
         "build": "rm -rf dist && yarn tsc",
@@ -27,6 +30,7 @@
         "build:docker:local": "sh scripts/build-local-docker.sh",
         "clean": "rm -rf dist node_modules",
         "dev": "tsx src/index.ts",
+        "lint": "npx eslint src/",
         "start": "node dist/index.js",
         "start:local": "API_BASE_URL=https://ip-127-0-0-1.hereby.dev:4090 SIGNAL_BASE_URL=wss://ip-127-0-0-1.hereby.dev:4070 sh scripts/update-sdk-base-url.sh && yarn build && yarn start"
     }
